<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Yass La Menace</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Hi, my name is Yass la menace.
\n\n I love CrossFit, couscous and  Mafé 🏋 .
\n\nTship tchip tchip .
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\n
\n 🇲🇦 212 Moroco welcome to the kingdom 🇲🇦 \n\n</string>
    <string name="todo">TODO</string>
    <string name="click_for_hide_img" > Show my head 🙃 </string>
    <string name="placeholder" > What is your Nickname ? </string>
    <string name="what_is_your_nickname">What is your Nickname</string>
    <string name="done">Done</string>
    <string name="textview">TextView</string>
</resources>
